codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_view__tests__feedback_success_employee.snap
---
source: tui/src/bottom_pane/feedback_view.rs
expression: rendered
---
• 反馈已上传。 可以在 #codex-feedback 中分享：

  http://go/codex-feedback-internal

  Sentry 反馈 ID：thread-2
  Sentry URL：https://go/codex-feedback/thread-2
