codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_view__tests__feedback_upload_consent_lists_doctor_report.snap
---
source: tui/src/bottom_pane/feedback_view.rs
expression: rendered
---
是 否 上 传 日 志 ？

将 发 送 以 下 文 件 ：
  • codex-logs.log
  • codex-doctor-report.json
  • codex-apps-tools-cache.json（ 如 可 用 ）
  • codex-app-directory-cache.json（ 如 可 用 ）
  • rollout.jsonl
  • auto-review-rollout.jsonl
